--- a/spa/package.json
+++ b/spa/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.4.1",
@@ -11,8 +11,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
+    "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-toastify": "^5.2.1",
     "redux": "^4.0.1",
     "redux-form": "^8.2.3",
     "redux-logger": "^3.0.6",
