--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django=2.2.2
-djangorestframework=3.9.4
-django-filter=2.1.0
-markdown=3.1.1
+django==2.2.2
+djangorestframework==3.9.4
+django-filter==2.1.0
+markdown==3.1.1
